# Edge_Sports_Analysis_Engine

./: .gitignore  AGENTS.md  CMakeLists.txt  MISSION.md  README.md  RESOURCES.md
assets/: lesson.css
configs/: caffe_ohp_jetson.yaml  caffe_pose_jetson.yaml  caffe_squat_jetson.yaml  motion.yaml  ohp.yaml  pose.yaml  pose_jetson.yaml  tracking.yaml  yolo11_ohp_jetson.yaml  yolo11_pose_jetson.yaml  yolo11_squat_jetson.yaml
docs/: JETSON_SETUP.md  PLATFORM_RUN_GUIDE.md  POSE_ANALYTICS_DECISION_MAP.md  POSE_INFERENCE_GUIDE.md  SQUAT_ANALYTICS_GUIDE.md  VIDEO_ENGINE_GUIDE.md
include/analytics/: AnalyticsTypes.hpp  FilmSide.hpp  IPoseAnalyzer.hpp  OhpAnalyzer.hpp  OhpSummaryWriter.hpp  SquatAnalyzer.hpp
include/core/: FrameContext.hpp  FrameTimeline.hpp  IVideoSource.hpp  Pipeline.hpp
include/inference/: TensorRtRunner.hpp
include/pose/: OpenPoseCocoAdapter.hpp  PoseTypes.hpp  YoloPoseDecoder.hpp
include/processors/: PoseAnalyticsProcessor.hpp  PoseAnalyticsRenderer.hpp  PoseEstimator.hpp  ResizeProcessor.hpp  SkeletonRenderer.hpp
include/sources/: VideoFileSource.hpp  WebcamSource.hpp
include/utils/: Profiler.hpp
lessons/: 0001-cpu-gpu-dataflow.html  0002-pose-results-to-motion-metrics.html  0003-reliable-pose-contract.html
reference/: jetson-pipeline-cheatsheet.html  pose-analytics-cheatsheet.html
scripts/: build_opencv_cuda.sh  build_yolo11_tensorrt.sh  download_pose_model.sh  setup_jetson.sh
src/: diagnostics.cpp  main.cpp
tests/: test_frame_timeline.cpp  test_ohp_analyzer.cpp  test_pose_schema.cpp  test_profiler.cpp  test_resize_processor.cpp  test_skeleton_renderer.cpp  test_squat_analyzer.cpp  test_yolo_pose_decoder.cpp
